# MIDIPiano

./: CMakeLists.txt  README.md  main.cpp  test.md
include/: Note.h
src/: GuiPiano.cpp  KeyManager.cpp  Logger.cpp  VoiceList.cpp  main.cpp
src/Commands/: HelpCommand.cpp  MusicPlayCommand.cpp  RecordCommand.cpp  SelectCommand.cpp  StartCommand.cpp  helpCommand.cpp  selectCommand.cpp  startCommand.cpp
src/Entities/: MusicEntity.cpp  MusicNoteEntity.cpp  Note.cpp  NoteEntity.cpp
